--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -1,7 +1,22 @@
-<h1>Display your Pirate here</h1>
-
-
-<h2>Display your first ship here</h2>
-
-
-<h2>Display your second ship here</h2>
+<!DOCTYPE html>
+<html>
+ <head>
+  <meta charset="UTF-8">
+  <title>Pirates List</title>
+ </head>
+ <body>
+   <% count=1 %>
+    <h1>Pirate Details</h1>
+    <h4>Pirate Attributes</h4>
+    <p>Name: <%=@pirate.name%></p>
+    <p>Weight:<%=@pirate.weight%></p>
+    <p>Height:<%=@pirate.height%></p>
+    <% @ships.each do |ship| %>
+    <h4>Ship <%=count%> Attributes</h4>
+    <p>Ship Name:<%=ship.name%></p>
+    <p>Ship Type:<%=ship.type%></p>
+    <p>Ship Booty:<%=ship.booty%></p>
+    <% count += 1 %>
+    <% end %>
+  </body>
+</html>
